--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerButtonsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerButtonsView.xaml
@@ -6,37 +6,6 @@
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView">
     <ContentView.Content>
-        <!--<Grid HorizontalOptions="CenterAndExpand"
-          x:Name="ButtonsGrid"
-          BackgroundColor="Transparent">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="5*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="1*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <xfShapeView:ShapeView ShapeType="Circle" BorderColor="#F1F1F1" BorderWidth="9" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0" HorizontalOptions="End" >
-                <xfShapeView:ShapeView.Content>
-                    <elements:TintedSvgCachedImage Margin="30" Source="resource://MSO.StimmApp.Resources.Icons.cross.svg" TintColor="PaleVioletRed" />
-                </xfShapeView:ShapeView.Content>
-            </xfShapeView:ShapeView>
-
-            <xfShapeView:ShapeView ShapeType="Circle" Grid.Column="1" Grid.Row="1" BorderColor="#F1F1F1" BorderWidth="9" HorizontalOptions="Center" >
-                <xfShapeView:ShapeView.Content>
-                    <elements:TintedSvgCachedImage Margin="15" Source="resource://MSO.StimmApp.Resources.Icons.cross.svg" TintColor="CornflowerBlue" />
-                </xfShapeView:ShapeView.Content>
-            </xfShapeView:ShapeView>
-
-            <xfShapeView:ShapeView ShapeType="Circle" BorderColor="#F1F1F1" Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" HorizontalOptions="Start" BorderWidth="9">
-                <xfShapeView:ShapeView.Content>
-                    <elements:TintedSvgCachedImage Margin="30" Source="resource://MSO.StimmApp.Resources.Icons.cross.svg" TintColor="LightSeaGreen" />
-                </xfShapeView:ShapeView.Content>
-            </xfShapeView:ShapeView>
-        </Grid>-->
         <StackLayout
             HorizontalOptions="Center"
             Orientation="Horizontal"
@@ -51,7 +20,11 @@
                     <elements:TintedSvgCachedImage
                         Margin="35"
                         Source="resource://MSO.StimmApp.Resources.Icons.dislike.svg"
-                        TintColor="#F2866A" />
+                        TintColor="#F2866A">
+                        <elements:TintedSvgCachedImage.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="DislikeImageButton_OnTapped" />
+                        </elements:TintedSvgCachedImage.GestureRecognizers>
+                    </elements:TintedSvgCachedImage>
                 </xfShapeView:ShapeView.Content>
             </xfShapeView:ShapeView>
 
@@ -75,7 +48,6 @@
                 </xfShapeView:ShapeView.Content>
             </xfShapeView:ShapeView>
 
-
             <xfShapeView:ShapeView
                 BorderColor="#F1F1F1"
                 BorderWidth="9"
@@ -86,7 +58,11 @@
                     <elements:TintedSvgCachedImage
                         Margin="35"
                         Source="resource://MSO.StimmApp.Resources.Icons.like.svg"
-                        TintColor="#62DD9F" />
+                        TintColor="#62DD9F">
+                        <elements:TintedSvgCachedImage.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="LikeImageButton_OnTapped" />
+                        </elements:TintedSvgCachedImage.GestureRecognizers>
+                    </elements:TintedSvgCachedImage>
                 </xfShapeView:ShapeView.Content>
             </xfShapeView:ShapeView>
         </StackLayout>
