--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -33,9 +33,10 @@
                 IsVisible="true"
                 VerticalOptions="End">
                 <elements:TintedSvgCachedImage
-                    Margin="0,0,50,50" IsVisible="{Binding IsEditable}"
+                    Margin="0,0,50,50"
                     HeightRequest="65"
                     HorizontalOptions="Center"
+                    IsVisible="{Binding IsEditable}"
                     Source="resource://MSO.StimmApp.Resources.Icons.plus_circle.svg"
                     TintColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.StandardButtonColor}"
                     VerticalOptions="Center"
@@ -46,10 +47,13 @@
                     </forms:SvgCachedImage.GestureRecognizers>
                 </elements:TintedSvgCachedImage>
             </Grid>
-            <xfShapeView:ShapeView Margin="15,0,15,0"
+            <xfShapeView:ShapeView
                 Grid.Row="2"
+                Margin="15,0,15,0"
                 BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
-                IsVisible="{Binding IsAddingAttachment}" BorderColor="LightGray" BorderWidth="2">
+                BorderColor="LightGray"
+                BorderWidth="2"
+                IsVisible="{Binding IsAddingAttachment}">
                 <xfShapeView:ShapeView.Content>
                     <attachments:AddAttachmentView />
                 </xfShapeView:ShapeView.Content>
