--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerEditorPage.xaml
@@ -10,84 +10,10 @@
     BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}"
     BindingContext="{Binding AppStimmerEditor, Source={StaticResource Locator}}">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="10*" />
-            <RowDefinition Height="90*" />
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0" ColumnSpacing="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*" />
-                <ColumnDefinition Width="1*" />
-            </Grid.ColumnDefinitions>
-
-            <Grid Grid.Column="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="97*" />
-                    <RowDefinition Height="3*" />
-                </Grid.RowDefinitions>
-
-                <xfShapeView:ShapeView
-                    Grid.RowSpan="2"
-                    Grid.Column="0"
-                    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}">
-                    <xfShapeView:ShapeView.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OverviewTab_OnTapped" />
-                    </xfShapeView:ShapeView.GestureRecognizers>
-                    <xfShapeView:ShapeView.Content>
-                        <Label
-                            HorizontalOptions="Center"
-                            HorizontalTextAlignment="Center"
-                            Opacity="{Binding DisplayType, Converter={StaticResource ÁppStimmerEditorDisplayTypeToOpacityConverter}, ConverterParameter=overview}"
-                            Text="Übersicht"
-                            TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryTextColor}"
-                            VerticalOptions="Center"
-                            VerticalTextAlignment="Center" />
-                    </xfShapeView:ShapeView.Content>
-                </xfShapeView:ShapeView>
-                <BoxView
-                    Grid.Row="1"
-                    IsVisible="{Binding DisplayType, Converter={StaticResource AppStimmerEditorDisplayTypeToViewVisibilityConverter}, ConverterParameter=overview}"
-                    Color="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.ActiveTabIndicatorColor}" />
-            </Grid>
-
-
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="97*" />
-                    <RowDefinition Height="3*" />
-                </Grid.RowDefinitions>
-
-                <xfShapeView:ShapeView
-                    Grid.RowSpan="2"
-                    Grid.Column="0"
-                    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}">
-                    <xfShapeView:ShapeView.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="Details_OnTapped" />
-                    </xfShapeView:ShapeView.GestureRecognizers>
-                    <xfShapeView:ShapeView.Content>
-                        <Label
-                            HorizontalOptions="Center"
-                            HorizontalTextAlignment="Center"
-                            Opacity="{Binding DisplayType, Converter={StaticResource ÁppStimmerEditorDisplayTypeToOpacityConverter}, ConverterParameter=details}"
-                            Text="Details"
-                            TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryTextColor}"
-                            VerticalOptions="Center"
-                            VerticalTextAlignment="Center" />
-                    </xfShapeView:ShapeView.Content>
-                </xfShapeView:ShapeView>
-                <BoxView
-                    Grid.Row="1"
-                    IsVisible="{Binding DisplayType, Converter={StaticResource AppStimmerEditorDisplayTypeToViewVisibilityConverter}, ConverterParameter=details}"
-                    Color="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.ActiveTabIndicatorColor}" />
-            </Grid>
-        </Grid>
-
-        <Grid Grid.Row="1">
-            <appStimmerEditor:AppStimmerEditorOverviewView IsVisible="{Binding DisplayType, Converter={StaticResource AppStimmerEditorDisplayTypeToViewVisibilityConverter}, ConverterParameter=overview}" />
-            <appStimmerEditor:AppStimmerEditorDetailsView IsVisible="{Binding DisplayType, Converter={StaticResource AppStimmerEditorDisplayTypeToViewVisibilityConverter}, ConverterParameter=details}" />
-        </Grid>
+        <appStimmerEditor:AppStimmerEditorDetailsView IsVisible="{Binding IsEditable, Converter={StaticResource BooleanConverter}, ConverterParameter=inverted}" />
+        <appStimmerEditor:AppStimmerEditorTabbedView IsVisible="{Binding IsEditable}" />
     </Grid>
+
     <!--<TabbedPage.Children>
         <ContentPage Title="Overview">
             <ContentPage.Content>
