--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorDetailsView.xaml
@@ -20,7 +20,6 @@
 
             <appStimmerEditor:AppStimmerEditorHeader Grid.Row="0" />
             <attachments:AppStimmerAttachmentsListView
-                x:Name="AttachmentsListView"
                 Grid.Row="1"
                 Grid.RowSpan="2"
                 Margin="15"
@@ -47,7 +46,7 @@
                     </forms:SvgCachedImage.GestureRecognizers>
                 </elements:TintedSvgCachedImage>
             </Grid>
-            <xfShapeView:ShapeView
+            <!--<xfShapeView:ShapeView
                 Grid.Row="2"
                 Margin="15,0,15,0"
                 BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
@@ -57,7 +56,7 @@
                 <xfShapeView:ShapeView.Content>
                     <attachments:AddAttachmentView />
                 </xfShapeView:ShapeView.Content>
-            </xfShapeView:ShapeView>
+            </xfShapeView:ShapeView>-->
         </Grid>
     </ContentView.Content>
 </ContentView>
