--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorTabbedView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/AppStimmerEditorTabbedView.xaml
@@ -94,6 +94,7 @@
 
             <Grid
                 Grid.Row="2"
+                Margin="15,0,15,0"
                 ColumnSpacing="0"
                 RowSpacing="0">
                 <Grid.ColumnDefinitions>
