--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
@@ -6,11 +6,28 @@
     xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
     xmlns:attachments="clr-namespace:MSO.StimmApp.Views.ContentViews.AppStimmerEditor.Attachments;assembly=MSO.StimmApp"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-    BackgroundColor="Aqua"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
+    BackgroundColor="Transparent"
     CloseWhenBackgroundIsClicked="True"
-    HasSystemPadding="False"
-    HeightRequest="100"
-    WidthRequest="100">
+    HasSystemPadding="True">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70*" />
+            <RowDefinition Height="30*" />
+            <!--<RowDefinition Height="10*" />-->
+        </Grid.RowDefinitions>
+
+
+        <Frame
+            Grid.Row="1"
+            Margin="15,0,15,0"
+            BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PopupColor}"
+            CornerRadius="10">
+            <attachments:AddAttachmentView />
+        </Frame>
+    </Grid>
+
     <!--<pages:PopupPage.Animation>
         <animations:ScaleAnimation
             DurationIn="400"
@@ -23,6 +40,4 @@
             ScaleIn="1.2"
             ScaleOut="0.8" />
     </pages:PopupPage.Animation>-->
-
-    <attachments:AddAttachmentView />
 </pages:PopupPage>
