--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AppStimmerAttachmentsListView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AppStimmerAttachmentsListView.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:attachments1="clr-namespace:MSO.StimmApp.Views.ContentViews.AppStimmerEditor.Attachments;assembly=MSO.StimmApp"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+    xmlns:views="clr-namespace:MSO.StimmApp.Views;assembly=MSO.StimmApp"
     xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
     x:Name="AttachmentsListVieww"
     BackgroundColor="Transparent"
@@ -12,7 +13,7 @@
     ItemTapped="AppStimmerAttachmentsListView_OnItemTapped"
     SeparatorVisibility="None">
     <ListView.ItemTemplate>
-        <DataTemplate>
+        <DataTemplate >
             <ViewCell>
                 <ViewCell.View>
                     <AbsoluteLayout Padding="10,10,10,10">
@@ -39,7 +40,10 @@
 
                                     <Grid BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemColor}" HeightRequest="125">
                                         <Grid.Children>
-                                            <attachments1:TextAttachmentView x:Name="TestAttachmentsView" IsVisible="{Binding AttachmentType, Converter={StaticResource AppStimmerAttachmentTypeToViewEnabledConverter}, ConverterParameter=Text}" />
+                                            <attachments1:TextAttachmentView
+                                                x:Name="TestAttachmentsView"
+                                                IsEnabled="{Binding Path=BindingContext.IsEditable, Source={views:ElementSource AttachmentsListVieww}}"
+                                                IsVisible="{Binding AttachmentType, Converter={StaticResource AppStimmerAttachmentTypeToViewEnabledConverter}, ConverterParameter=Text}" />
                                             <attachments1:ImageAttachmentView IsVisible="{Binding AttachmentType, Converter={StaticResource AppStimmerAttachmentTypeToViewEnabledConverter}, ConverterParameter=Gallery}" />
                                         </Grid.Children>
                                     </Grid>
