--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
@@ -15,50 +15,38 @@
             <elements:SwipeCardView.ItemTemplate>
                 <DataTemplate x:Name="AppstimmerTemplate">
                     <Frame
+                        x:Name="CardFrame"
                         Padding="0"
                         CornerRadius="8"
                         InputTransparent="True">
 
-                        <Grid>
+                        <Grid RowSpacing="0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="100" />
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="50" />
                             </Grid.RowDefinitions>
 
-                            <ScrollView
-                                x:Name="Scroller"
+                            <Image
+                                x:Name="AppStimmerPicture"
                                 Grid.Row="0"
-                                Grid.RowSpan="2"
-                                InputTransparent="True">
-                                <Grid RowSpacing="0" VerticalOptions="Fill">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Image
-                                        x:Name="AppStimmerPicture"
-                                        Grid.Row="0"
-                                        Aspect="AspectFill"
-                                        HeightRequest="400"
-                                        HorizontalOptions="Fill"
-                                        Source="{Binding Picture, Converter={StaticResource ImageSourceConverter}}"
-                                        VerticalOptions="Center" />
+                                Grid.RowSpan="3"
+                                Aspect="AspectFill"
+                                HorizontalOptions="Fill"
+                                Source="{Binding Picture, Converter={StaticResource ImageSourceConverter}}"
+                                VerticalOptions="Fill" />
 
-                                    <Grid Grid.Row="1" BackgroundColor="White">
-                                        <StackLayout Orientation="Vertical" Spacing="0">
-                                            <Label
-                                                Margin="10,10,0,0"
-                                                FontSize="20"
-                                                Text="{Binding Title}" />
-                                            <Label
-                                                Margin="10,0,0,10"
-                                                FontSize="15"
-                                                Text="{Binding Appstract}" />
-                                        </StackLayout>
-                                    </Grid>
-                                </Grid>
-                            </ScrollView>
+                            <StackLayout x:Name="TitleStackLayout" Grid.Row="2">
+                                <stimmApp:GradientLabel
+                                    FontSize="20"
+                                    Text="{Binding Title}"
+                                    TextColor="White" />
+                                <!--<Label
+                                    Margin="10,0,0,10"
+                                    FontSize="15"
+                                    Text="{Binding Appstract}" />-->
 
+                            </StackLayout>
                             <StackLayout
                                 Grid.Row="0"
                                 Orientation="Horizontal"
