--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
@@ -8,6 +8,15 @@
     Title="Appstimmen"
     BackgroundColor="White"
     BindingContext="{Binding AppStimmer, Source={StaticResource Locator}}">
+
+    <!--<xfGloss:ContentPageGloss.BackgroundGradient>
+        <xfGloss:Gradient>
+            <xfGloss:GradientStep StepColor="White" StepPercentage="0" />
+            <xfGloss:GradientStep StepColor="White" StepPercentage=".5" />
+            <xfGloss:GradientStep StepColor="#ccd9ff" StepPercentage="1" />
+        </xfGloss:Gradient>
+    </xfGloss:ContentPageGloss.BackgroundGradient>-->
+
     <ContentPage.Content>
         <Grid ColumnSpacing="0" RowSpacing="0">
             <Grid.RowDefinitions>
