--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
@@ -36,17 +36,26 @@
                                 Source="{Binding Picture, Converter={StaticResource ImageSourceConverter}}"
                                 VerticalOptions="Fill" />
 
-                            <StackLayout x:Name="TitleStackLayout" Grid.Row="2">
-                                <stimmApp:GradientLabel
+                            <stimmApp:GradientFrame
+                                Grid.Row="2"
+                                Padding="0"
+                                OutlineColor="Transparent">
+                                <Label
+                                    Margin="12,12,0,12"
                                     FontSize="20"
                                     Text="{Binding Title}"
                                     TextColor="White" />
-                                <!--<Label
+                            </stimmApp:GradientFrame>
+                            <!--<StackLayout x:Name="TitleStackLayout" >
+
+                            -->
+                            <!--<Label
                                     Margin="10,0,0,10"
                                     FontSize="15"
                                     Text="{Binding Appstract}" />-->
+                            <!--
 
-                            </StackLayout>
+                            </StackLayout>-->
                             <StackLayout
                                 Grid.Row="0"
                                 Orientation="Horizontal"
