--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Elements/AppStimmerAttachmentButton.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Elements/AppStimmerAttachmentButton.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <ContentView
-    x:Class="MSO.StimmApp.Controls.AppStimmerAttachmentButton"
+    x:Class="MSO.StimmApp.Elements.AppStimmerAttachmentButton"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentView.Content>
