--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
@@ -21,42 +21,42 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddDocumentButton"
                 Grid.Row="0"
                 Grid.Column="0"
                 AttachmentType="{x:Static enums:AttachmentType.Document}"
                 Description="Dokument"
                 IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddCameraPictureButton"
                 Grid.Row="0"
                 Grid.Column="1"
                 AttachmentType="{x:Static enums:AttachmentType.Camera}"
                 Description="Kamera"
                 IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddGalleryPictureButton"
                 Grid.Row="0"
                 Grid.Column="2"
                 AttachmentType="{x:Static enums:AttachmentType.Gallery}"
                 Description="Galerie"
                 IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddTextButton"
                 Grid.Row="1"
                 Grid.Column="0"
                 AttachmentType="{x:Static enums:AttachmentType.Text}"
                 Description="Text"
                 IconSource="MSO.StimmApp.Resources.Icons.text_circle.scale-100.png" />
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddLocationButton"
                 Grid.Row="1"
                 Grid.Column="1"
                 AttachmentType="{x:Static enums:AttachmentType.Location}"
                 Description="Standort"
                 IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
-            <controls:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
                 x:Name="AddAudioButtonn"
                 Grid.Row="1"
                 Grid.Column="2"
