--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerCardView.xaml
@@ -36,26 +36,18 @@
                                 Source="{Binding Picture, Converter={StaticResource ImageSourceConverter}}"
                                 VerticalOptions="Fill" />
 
-                            <stimmApp:GradientFrame
+                            <elements:GradientFrame
                                 Grid.Row="2"
                                 Padding="0"
-                                OutlineColor="Transparent">
+                                EndColor="#88000000"
+                                OutlineColor="Transparent"
+                                StartColor="#00000000">
                                 <Label
                                     Margin="12,12,0,12"
                                     FontSize="20"
                                     Text="{Binding Title}"
                                     TextColor="White" />
-                            </stimmApp:GradientFrame>
-                            <!--<StackLayout x:Name="TitleStackLayout" >
-
-                            -->
-                            <!--<Label
-                                    Margin="10,0,0,10"
-                                    FontSize="15"
-                                    Text="{Binding Appstract}" />-->
-                            <!--
-
-                            </StackLayout>-->
+                            </elements:GradientFrame>
                             <StackLayout
                                 Grid.Row="0"
                                 Orientation="Horizontal"
