--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
@@ -2,10 +2,16 @@
 <ContentView
     x:Class="MSO.StimmApp.Views.ContentViews.AppStimmerEditor.Attachments.ImageAttachmentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp">
     <ContentView.Content>
-        <Grid>
-            <Image Aspect="AspectFill" Source="{Binding AttachmentSource, Converter={StaticResource ImageSourceConverter}}" />
-        </Grid>
+        <StackLayout Margin="5,5,5,8">
+
+            <Image
+                Aspect="AspectFill"
+                HeightRequest="300"
+                Source="{Binding AttachmentSource, Converter={StaticResource ImageSourceConverter}}" />
+            <elements:ExpandableEditor Text="{Binding Description}" />
+        </StackLayout>
     </ContentView.Content>
 </ContentView>
