--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
@@ -15,6 +15,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="70*" />
             <RowDefinition Height="30*" />
+            <RowDefinition Height="30*" />
             <!--<RowDefinition Height="10*" />-->
         </Grid.RowDefinitions>
 
