--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/ImageAttachmentView.xaml
@@ -3,7 +3,8 @@
     x:Class="MSO.StimmApp.Views.ContentViews.AppStimmerEditor.Attachments.ImageAttachmentView"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp">
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
         <StackLayout Margin="5,5,5,8">
             <Image
@@ -14,7 +15,7 @@
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped" />
                 </Image.GestureRecognizers>
             </Image>
-            <elements:ExpandableEditor Text="{Binding Description}" />
+            <elements:ExpandableEditor Text="{Binding Description}" TextColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemTextColor}" />
         </StackLayout>
     </ContentView.Content>
 </ContentView>
