--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowVideoAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowVideoAttachmentPage.xaml
@@ -5,49 +5,155 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:forms="clr-namespace:Plugin.MediaManager.Forms;assembly=Plugin.MediaManager.Forms"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
+    BackgroundColor="Black"
     HasSystemPadding="False">
-    <Grid>
+    <Grid x:Name="VideoPlayerGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="40*" />
+            <RowDefinition Height="30*" />
+            <RowDefinition Height="40*" />
         </Grid.RowDefinitions>
 
-        <!--<forms:VideoView Grid.Row="0" Grid.RowSpan="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
+        <forms:VideoView
+            x:Name="VideoView"
+            AspectMode="AspectFill"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand" />
+
+        <Grid
+            Grid.Row="2"
+            Margin="0,0,0,50"
+            HeightRequest="50"
+            VerticalOptions="End">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="50" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="50" />
+
+                </Grid.ColumnDefinitions>
+                <Label
+                    Grid.Column="0"
+                    Margin="5,0,0,0"
+                    Text="{Binding Elapsed, Converter={StaticResource TimeSpanToStringConverter}, ConverterParameter=short}"
+                    TextColor="White"
+                    VerticalOptions="Center" />
+                <Slider
+                    x:Name="ProgressSlider"
+                    Grid.Column="1"
+                    HorizontalOptions="FillAndExpand"
+                    Value="{Binding ProgressValue}" />
+                <Label
+                    Grid.Column="2"
+                    Margin="0,0,5,0"
+                    Text="{Binding TotalLength, Converter={StaticResource TimeSpanToStringConverter}, ConverterParameter=short}"
+                    TextColor="White"
+                    VerticalOptions="Center" />
+            </Grid>
+            <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" />
+            <!--<ProgressBar
+                x:Name="ProgressBar"
+                VerticalOptions="End" />-->
+        </Grid>
+    </Grid>
+
+    <!--<Grid.RowDefinitions>
+            <RowDefinition Height="4*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+
+    -->
+    <!--<forms:VideoView Grid.Row="0" Grid.RowSpan="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
                      Source="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" AspectMode="AspectFill"/>-->
+    <!--
 
-        <forms:VideoView x:Name="videoView"
-                         Grid.Row="0" Grid.RowSpan="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
-                         AspectMode="AspectFill"/>
 
-        <Grid HorizontalOptions="FillAndExpand" Grid.Row="1" Grid.RowSpan="1" Margin="20">
+
+        <Grid
+            Grid.Row="1"
+            Grid.RowSpan="1"
+            Margin="20"
+            HorizontalOptions="FillAndExpand">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="6*"/>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="6*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <StackLayout Grid.Row="0" Grid.ColumnSpan="3" Orientation="Vertical">
+            <StackLayout
+                Grid.Row="0"
+                Grid.ColumnSpan="3"
+                Orientation="Vertical">
                 <StackLayout Orientation="Horizontal" VerticalOptions="Start">
-                    <Label Text="Duration: "></Label>
-                    <Label x:Name="Duration"/>
+                    <Label Text="Duration: " />
+                    <Label x:Name="Duration" />
                 </StackLayout>
-                <ProgressBar x:Name="ProgressBar" Grid.ColumnSpan="3" HorizontalOptions="FillAndExpand" VerticalOptions="End"></ProgressBar>
+                <ProgressBar
+                    x:Name="ProgressBar"
+                    Grid.ColumnSpan="3"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="End" />
             </StackLayout>
 
-            <Button Grid.Row="1" Grid.Column="0" TextColor="White" BackgroundColor="Gray" HeightRequest="50" VerticalOptions="Center" Text="Play" WidthRequest="100" Clicked="PlayClicked"></Button>
-            <Button Grid.Row="1" Grid.Column="1" TextColor="White" Text="Pause" BackgroundColor="Gray" HeightRequest="50" VerticalOptions="Center" WidthRequest="100" Clicked="PauseClicked"></Button>
-            <Button Grid.Row="1" Grid.Column="2" TextColor="White" Text="Stop" BackgroundColor="Gray" HeightRequest="50" VerticalOptions="Center" WidthRequest="100" Clicked="StopClicked"></Button>
+            <Button
+                Grid.Row="1"
+                Grid.Column="0"
+                BackgroundColor="Gray"
+                Clicked="PlayClicked"
+                HeightRequest="50"
+                Text="Play"
+                TextColor="White"
+                VerticalOptions="Center"
+                WidthRequest="100" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                BackgroundColor="Gray"
+                Clicked="PauseClicked"
+                HeightRequest="50"
+                Text="Pause"
+                TextColor="White"
+                VerticalOptions="Center"
+                WidthRequest="100" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="2"
+                BackgroundColor="Gray"
+                Clicked="StopClicked"
+                HeightRequest="50"
+                Text="Stop"
+                TextColor="White"
+                VerticalOptions="Center"
+                WidthRequest="100" />
         </Grid>
 
-        <StackLayout Orientation="Horizontal" VerticalOptions="End" Grid.Row="2">
-            <Label x:Name="volumeLabel" Text="Volume (0-100):" HorizontalOptions="Start"></Label>
-            <Entry x:Name="volumeEntry" Text="50" Keyboard="Numeric"  HorizontalOptions="StartAndExpand" WidthRequest="100"></Entry>
-            <Button x:Name="setVolumeBtn" Text="Set Volume" HorizontalOptions="Start" Clicked="SetVolumeBtn_OnClicked"></Button>
-            <Button x:Name="mutedBtn" Text="Mute" HorizontalOptions="End" Clicked="MutedBtn_OnClicked"></Button>
-        </StackLayout>
-    </Grid>
+        <StackLayout
+            Grid.Row="2"
+            Orientation="Horizontal"
+            VerticalOptions="End">
+            <Label
+                x:Name="volumeLabel"
+                HorizontalOptions="Start"
+                Text="Volume (0-100):" />
+            <Entry
+                x:Name="volumeEntry"
+                HorizontalOptions="StartAndExpand"
+                Keyboard="Numeric"
+                Text="50"
+                WidthRequest="100" />
+            <Button
+                x:Name="setVolumeBtn"
+                Clicked="SetVolumeBtn_OnClicked"
+                HorizontalOptions="Start"
+                Text="Set Volume" />
+            <Button
+                x:Name="mutedBtn"
+                Clicked="MutedBtn_OnClicked"
+                HorizontalOptions="End"
+                Text="Mute" />
+        </StackLayout>-->
 </pages:PopupPage>
